test/libyul/yulSyntaxTests/objects/dataoffset_nonstring.yul
object "A" {
  code {
    pop(dataoffset(0))
  }
}
// ----
// TypeError 5017: (30-40): The identifier "dataoffset" is reserved and can not be used.
// TypeError 5859: (41-42): Function expects string literal.
